# star-dot-box

./: BUILD.bazel  MODULE.bazel  README.md  maven_install.json
.github/workflows/: build.yml
asset-picker/: BUILD.bazel  Main.kt
asset-picker/backend/: Asset.kt  BUILD.bazel  EntryBackend.kt
asset-picker/backend/model/: Asset.kt  AssetManifest.kt  BUILD.bazel
asset-picker/backend/service/: BUILD.bazel  EntryBackend.kt
asset-picker/backend/service/impl/: EntryBackendImpl.kt
asset-picker/ui/: BUILD.bazel  MainPanel.kt
star-dot-box/: BUILD.bazel  Main.kt
star-dot-box/launcher/: BUILD.bazel  main.rs
star-dot-box/plugin/: BUILD.bazel  PluginDiscoverer.kt
star-dot-box/plugin/api/: BUILD.bazel  StarDotBoxPlugin.kt
text-editor/: BUILD.bazel  Main.kt
text-editor/state/colors/: BUILD.bazel  PredefinedColors.kt
text-editor/ui/: BUILD.bazel  MainPanel.kt
text-editor/ui/colorpicker/: BUILD.bazel  ColorPickerDialog.kt
text-editor/ui/parser/: BUILD.bazel  RichTextStateGIParser.kt
text-editor/ui/richtext/: BUILD.bazel  RichTextStyleButton.kt  RichTextStyleRow.kt
text-editor/util/color/: BUILD.bazel  ColorToHex.kt
