load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_kotlin//kotlin:core.bzl", "define_kt_toolchain", "kt_compiler_plugin")
load("@rules_pkg//pkg/private/zip:zip.bzl", "pkg_zip")

config_setting(
    name = "config_fastbuild",
    values = {
        "compilation_mode": "fastbuild",
    },
)

config_setting(
    name = "config_opt",
    values = {
        "compilation_mode": "opt",
    },
)

pkg_zip(
    name = "dist_zip",
    srcs = select({
        "@platforms//os:windows": [
            "//star-dot-box:star-dot-box_deploy.jar",
            "//star-dot-box/launcher",
            "@adoptium_openjdk_21_windows_x86_64//:files",
        ],
        "//conditions:default": [
            "//star-dot-box:star-dot-box_deploy.jar",
        ],
    }),
)

kt_compiler_plugin(
    name = "jetpack_compose_compiler_plugin",
    id = "androidx.compose.compiler.plugins.kotlin",
    target_embedded_compiler = True,
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_jetbrains_kotlin_kotlin_compose_compiler_plugin_embeddable",
    ],
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "2.1",
    experimental_report_unused_deps = "error",
    experimental_strict_kotlin_deps = "error",
    experimental_use_abi_jars = True,
    jvm_target = "21",
    language_version = "2.1",
)

java_binary(
    name = "copybara_bin",
    main_class = "com.google.copybara.Main",
    visibility = ["//visibility:public"],
    runtime_deps = ["@copybara//jar"],
)
