"star.box module"

module(
    name = "star-dot-box",
    version = "0.0.1",
)

bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_kotlin", version = "2.1.9")
bazel_dep(name = "rules_jvm_external", version = "6.8")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable:2.1.20",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2",
        "org.jetbrains.kotlinx:kotlinx-coroutines-swing:1.10.2",
        "org.jetbrains.compose.runtime:runtime-desktop:1.9.0",
        "org.jetbrains.compose.foundation:foundation-desktop:1.9.0",
        "org.jetbrains.compose.material3:material3-desktop:1.9.0",
        "org.jetbrains.compose.material:material-icons-core-desktop:1.7.3",
        "org.jetbrains.compose.material:material-icons-extended-desktop:1.7.3",
        "org.jetbrains.compose.ui:ui-desktop:1.9.0",
        "org.jetbrains.skiko:skiko-awt-runtime-windows-x64:0.9.22.2",
        "org.jetbrains.skiko:skiko-awt-runtime-linux-x64:0.9.22.2",
        "com.mohamedrejeb.richeditor:richeditor-compose-desktop:1.0.0-rc13",
        "com.github.skydoves:colorpicker-compose-desktop:1.1.2",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

register_toolchains("//:kotlin_toolchain")
