"star.box module"

module(
    name = "star-dot-box",
    version = "0.0.1",
)

bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_kotlin", version = "2.1.9")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.9")
bazel_dep(name = "rules_rust", version = "0.66.0")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.90.0"],
)
use_repo(rust, **{
    "rust_x86_64-unknown-linux-gnu": "rust_linux_x86_64__x86_64-unknown-linux-gnu__stable_tools",
})

http_archive(
    name = "rust_std_windows_x86_64_gnu",
    url = "https://static.rust-lang.org/dist/2025-09-18/rust-std-1.90.0-x86_64-pc-windows-gnullvm.tar.gz",
    sha256 = "ea6a14c08499be72d95bc908da58be921f35d68f193ea8ccbc116746c162e3ab",
    strip_prefix = "rust-std-1.90.0-x86_64-pc-windows-gnullvm/rust-std-x86_64-pc-windows-gnullvm",
    build_file = "//third_party/rust:BUILD.rust_std_windows_x86_64_gnu.bazel",
)
register_toolchains("//toolchains:rust_windows_x86_64")

llvm_mingw_toolchain = use_repo_rule("//third_party/llvm_mingw:llvm_mingw_toolchain.bzl", "llvm_mingw_toolchain")
llvm_mingw_toolchain(
    name = "llvm_mingw_toolchain",
    targets = {
        "x86_64": "x86_64-w64-mingw32",
        "i386": "i686-w64-mingw32",
        "aarch64": "aarch64-w64-mingw32",
    },
)
register_toolchains("@llvm_mingw_toolchain//:x86_64_toolchain")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable:2.1.20",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2",
        "org.jetbrains.kotlinx:kotlinx-coroutines-swing:1.10.2",
        "org.jetbrains.compose.runtime:runtime-desktop:1.9.0",
        "org.jetbrains.compose.foundation:foundation-desktop:1.9.0",
        "org.jetbrains.compose.material3:material3-desktop:1.9.0",
        "org.jetbrains.compose.material:material-icons-core-desktop:1.7.3",
        "org.jetbrains.compose.material:material-icons-extended-desktop:1.7.3",
        "org.jetbrains.compose.ui:ui-desktop:1.9.0",
        "org.jetbrains.skiko:skiko-awt-runtime-windows-x64:0.9.22.2",
        "org.jetbrains.skiko:skiko-awt-runtime-linux-x64:0.9.22.2",
        "com.mohamedrejeb.richeditor:richeditor-compose-desktop:1.0.0-rc13",
        "com.github.skydoves:colorpicker-compose-desktop:1.1.2",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

register_toolchains("//:kotlin_toolchain")

http_archive(
    name = "adoptium_openjdk_21_windows_x86_64",
    url = "https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.8%2B9/OpenJDK21U-jre_x64_windows_hotspot_21.0.8_9.zip",
    sha256 = "238d74ec4ec9422d416fa98805ba375eecd8bc8f971bd0c61a21051a4fe42db8",
    build_file = "@//third_party/openjdk:BUILD.openjdk.bazel",
)
