load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "text-editor_lib",
    srcs = ["Main.kt"],
    plugins = [
        "//:jetpack_compose_compiler_plugin",
    ],
    resource_strip_prefix = "text-editor/resources",
    resources = glob(["resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//star-dot-box/plugin/api",
        "//text-editor/ui",
        "@maven//:org_jetbrains_compose_ui_ui_desktop",
        "@maven//:org_jetbrains_compose_ui_ui_graphics_desktop",
    ],
    runtime_deps = [
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_swing",
        "@maven//:org_jetbrains_skiko_skiko_awt_runtime_linux_x64",
        "@maven//:org_jetbrains_skiko_skiko_awt_runtime_windows_x64",
    ],
)

java_binary(
    name = "text-editor",
    main_class = "voidthinking.texteditor.MainKt",
    runtime_deps = [
        ":text-editor_lib",
    ],
)
