load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "parser",
    srcs = glob(["*.kt"]),
    plugins = [
        "//:jetpack_compose_compiler_plugin",
    ],
    visibility = ["//text-editor:__subpackages__"],
    deps = [
        "//text-editor/util/color",
        "@maven//:com_mohamedrejeb_richeditor_richeditor_compose_desktop",
        "@maven//:org_jetbrains_compose_ui_ui_text_desktop",
        "@maven//:org_jetbrains_compose_ui_ui_graphics_desktop",
    ],
)
