load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "richtext",
    srcs = glob(["*.kt"]),
    plugins = [
        "//:jetpack_compose_compiler_plugin",
    ],
    visibility = ["//text-editor:__subpackages__"],
    deps = [
        "//text-editor/ui/colorpicker",
        "@maven//:androidx_compose_runtime_runtime_desktop",
        "@maven//:com_mohamedrejeb_richeditor_richeditor_compose_desktop",
        "@maven//:org_jetbrains_compose_foundation_foundation_desktop",
        "@maven//:org_jetbrains_compose_foundation_foundation_layout_desktop",
        "@maven//:org_jetbrains_compose_material3_material3_desktop",
        "@maven//:org_jetbrains_compose_material_material_icons_core_desktop",
        "@maven//:org_jetbrains_compose_material_material_icons_extended_desktop",
        "@maven//:org_jetbrains_compose_ui_ui_desktop",
        "@maven//:org_jetbrains_compose_ui_ui_graphics_desktop",
        "@maven//:org_jetbrains_compose_ui_ui_text_desktop",
        "@maven//:org_jetbrains_compose_ui_ui_unit_desktop",
    ],
)
